<resources>
    <string name="app_name">emplyee management</string>
    <string name="search_here_for_employee">Search here for employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_email">EmployeeEmail@gmail.com</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no_employee_data">No Employee data</string>
    <string name="employee_email_hint">Employee Email (OPTIONAL)</string>
    <string name="save">Save</string>
    <string name="name_is_required_error">Name is required</string>

    <string name="select_image">Select Image</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="skills">Skills</string>
    <string-array name="image_options">
        <item>Select photo from gallery</item>
        <item>Capture photo from camera</item>
    </string-array>
</resources>