<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_16sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_rounded_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/employee_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder_svg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/employee_email"
            app:layout_constraintStart_toEndOf="@+id/employee_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/employee_name" />

        <TextView
            android:id="@+id/employee_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/employee_name"
            app:layout_constraintTop_toBottomOf="@+id/employee_name"
            tools:text="@string/employee_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_employee_button"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/button_bg"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_employee_button"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/button_bg"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/delete_employee_button"
            app:layout_constraintEnd_toStartOf="@+id/delete_employee_button"
            app:layout_constraintTop_toTopOf="@+id/delete_employee_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
