<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/search_here_for_employee"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employee_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/add_employee_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
        tools:itemCount="5"
        tools:listitem="@layout/item_employee" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_employee_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/button_bg"
        android:text="@string/add_employee"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/no_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_employee_data"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>